@@ -178,11 +178,10 @@ static void display_data (ntp_data *data) {
 
 int	check_ntp(char *host, unsigned short port, int *value_int)
 {
-
 	zbx_sock_t	s;
 
 	int		ret;
-	char	*buf = NULL;
+	char		*buf = NULL;
 
 	ntp_data	data;
 	char		packet[NTP_PACKET_MIN];
@@ -191,16 +190,16 @@ int	check_ntp(char *host, unsigned short port, int *value_int)
 
 	*value_int = 0;
 
-	if (SUCCEED == (ret = zbx_tcp_connect(&s, CONFIG_SOURCE_IP, host, port, 0))) {
+	if (SUCCEED == (ret = zbx_tcp_connect(&s, CONFIG_SOURCE_IP, host, port, 0)))
+	{
 		make_packet(&data);
 
 		pack_ntp((unsigned char*)packet, sizeof(packet), &data);
 
-		if( SUCCEED == (ret = zbx_tcp_send_raw(&s, packet)) )
+		if (SUCCEED == (ret = zbx_tcp_send_raw(&s, packet)))
 		{
-			if( SUCCEED == (ret = zbx_tcp_recv(&s, &buf)) )
+			if (SUCCEED == (ret = zbx_tcp_recv(&s, &buf)))
 			{
-
 				unpack_ntp(&data, (unsigned char *)buf, (int)strlen(buf));
 
 #if OFF
@@ -213,10 +212,8 @@ int	check_ntp(char *host, unsigned short port, int *value_int)
 	}
 	zbx_tcp_close(&s);
 
-	if( FAIL == ret )
-	{
+	if (FAIL == ret)
 		zabbix_log(LOG_LEVEL_DEBUG, "NTP check error: %s", zbx_tcp_strerror());
-	}
 
 	return SYSINFO_RET_OK;
 }
