@@ -36,9 +36,8 @@
 static void	process_listener(zbx_sock_t *s)
 {
 	AGENT_RESULT	result;
-
-	char	*command;
-	char	**value = NULL;
+	char		*command;
+	char		**value = NULL;
 	int		ret;
 
 	if (SUCCEED == (ret = zbx_tcp_recv_to(s, &command, CONFIG_TIMEOUT)))
@@ -50,10 +49,10 @@ static void	process_listener(zbx_sock_t *s)
 		init_result(&result);
 		process(command, 0, &result);
 
-		if( NULL == (value = GET_TEXT_RESULT(&result)) )
+		if (NULL == (value = GET_TEXT_RESULT(&result)))
 			value = GET_MSG_RESULT(&result);
 
-		if(value)
+		if (NULL != value)
 		{
 			zabbix_log(LOG_LEVEL_DEBUG, "Sending back [%s]", *value);
 			ret = zbx_tcp_send_to(s, *value, CONFIG_TIMEOUT);
@@ -62,10 +61,8 @@ static void	process_listener(zbx_sock_t *s)
 		free_result(&result);
 	}
 
-	if( FAIL == ret )
-	{
+	if (FAIL == ret)
 		zabbix_log(LOG_LEVEL_DEBUG, "Process listener error: %s", zbx_tcp_strerror());
-	}
 }
 
 ZBX_THREAD_ENTRY(listener_thread, pSock)
@@ -81,7 +78,7 @@ ZBX_THREAD_ENTRY(listener_thread, pSock)
 
 	assert(pSock);
 
-	zabbix_log( LOG_LEVEL_INFORMATION, "zabbix_agentd listener started");
+	zabbix_log(LOG_LEVEL_INFORMATION, "zabbix_agentd listener started");
 
 #if defined(ZABBIX_DAEMON)
 	phan.sa_sigaction = child_signal_handler;
@@ -92,40 +89,39 @@ ZBX_THREAD_ENTRY(listener_thread, pSock)
 
 	memcpy(&s, ((zbx_sock_t *)pSock), sizeof(zbx_sock_t));
 
-	while(ZBX_IS_RUNNING())
+	while (ZBX_IS_RUNNING())
 	{
 		zbx_setproctitle("waiting for connection");
 
-		if( SUCCEED == (ret = zbx_tcp_accept(&s)) )
+		if (SUCCEED == (ret = zbx_tcp_accept(&s)))
 		{
 			local_request_failed = 0;     /* Reset consecutive errors counter */
 
 			zbx_setproctitle("processing request");
-
 			zabbix_log(LOG_LEVEL_DEBUG, "Processing request.");
-			if( SUCCEED == (ret = zbx_tcp_check_security(&s, CONFIG_HOSTS_ALLOWED, 0)) )
-			{
+
+			if (SUCCEED == (ret = zbx_tcp_check_security(&s, CONFIG_HOSTS_ALLOWED, 0)))
 				process_listener(&s);
-			}
 
 			zbx_tcp_unaccept(&s);
 		}
 
-		if( SUCCEED == ret )	continue;
+		if (SUCCEED == ret)
+			continue;
 
 		zabbix_log(LOG_LEVEL_DEBUG, "Listener error: %s", zbx_tcp_strerror());
 
 		if (local_request_failed++ > 1000)
 		{
-			zabbix_log( LOG_LEVEL_WARNING, "Too many consecutive errors on accept() call.");
+			zabbix_log(LOG_LEVEL_WARNING, "Too many consecutive errors on accept() call.");
 			local_request_failed = 0;
 		}
 
-		if(ZBX_IS_RUNNING())
+		if (ZBX_IS_RUNNING())
 			zbx_sleep(1);
 	}
 
-	zabbix_log( LOG_LEVEL_INFORMATION, "zabbix_agentd listener stopped");
+	zabbix_log(LOG_LEVEL_INFORMATION, "zabbix_agentd listener stopped");
 
 	ZBX_DO_EXIT();
 
