@@ -36,23 +36,21 @@ int	connect_to_node(int nodeid, zbx_sock_t *sock)
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In connect_to_node(nodeid:%d)", nodeid);
 
-	result = DBselect("select ip,port from nodes where nodeid=%d",
-		nodeid);
+	result = DBselect("select ip,port from nodes where nodeid=%d", nodeid);
 
-	if (NULL != (row = DBfetch(result))) {
+	if (NULL != (row = DBfetch(result)))
+	{
 		port = (unsigned short)atoi(row[1]);
 
 		if (SUCCEED == zbx_tcp_connect(sock, CONFIG_SOURCE_IP, row[0], port, 0))
 			res = SUCCEED;
 		else
 			zabbix_log(LOG_LEVEL_ERR, "NODE %d: Unable to connect to Node [%d] error: %s",
-				CONFIG_NODEID,
-				nodeid,
-				zbx_tcp_strerror());
-	} else
-		zabbix_log(LOG_LEVEL_ERR, "NODE %d: Node [%d] is unknown",
-			CONFIG_NODEID,
-			nodeid);
+					CONFIG_NODEID, nodeid, zbx_tcp_strerror());
+	}
+	else
+		zabbix_log(LOG_LEVEL_ERR, "NODE %d: Node [%d] is unknown", CONFIG_NODEID, nodeid);
+
 	DBfree_result(result);
 
 	return res;
@@ -62,16 +60,14 @@ int	send_data_to_node(int nodeid, zbx_sock_t *sock, const char *data)
 {
 	int	res;
 
-	if (FAIL == (res = zbx_tcp_send(sock, data))) {
+	if (FAIL == (res = zbx_tcp_send(sock, data)))
+	{
 		zabbix_log(LOG_LEVEL_ERR, "NODE %d: Error while sending data to Node [%d] error: %s",
-			CONFIG_NODEID,
-			nodeid,
-			zbx_tcp_strerror());
-	} else
+				CONFIG_NODEID, nodeid, zbx_tcp_strerror());
+	}
+	else
 		zabbix_log(LOG_LEVEL_DEBUG, "NODE %d: Sending [%s] to Node [%d]",
-			CONFIG_NODEID,
-			data,
-			nodeid);
+				CONFIG_NODEID, data, nodeid);
 
 	return res;
 }
@@ -80,16 +76,14 @@ int	recv_data_from_node(int nodeid, zbx_sock_t *sock, char **data)
 {
 	int	res;
 
-	if (FAIL == (res = zbx_tcp_recv(sock, data))) {
+	if (FAIL == (res = zbx_tcp_recv(sock, data)))
+	{
 		zabbix_log(LOG_LEVEL_ERR, "NODE %d: Error while receiving answer from Node [%d] error: %s",
-			CONFIG_NODEID,
-			nodeid,
-			zbx_tcp_strerror());
-	} else
+				CONFIG_NODEID, nodeid, zbx_tcp_strerror());
+	}
+	else
 		zabbix_log(LOG_LEVEL_DEBUG, "NODE %d: Receiving [%s] from Node [%d]",
-			CONFIG_NODEID,
-			*data,
-			nodeid);
+				CONFIG_NODEID, *data, nodeid);
 
 	return res;
 }
