@@ -404,7 +404,7 @@ static int	process_trap(zbx_sock_t	*sock, char *s, int max_len)
 	return ret;
 }
 
-void	process_trapper_child(zbx_sock_t *sock)
+static void	process_trapper_child(zbx_sock_t *sock)
 {
 	char	*data;
 
